# zip-mnist

./: .gitignore  README.md  env.sh  main.py  pyproject.toml  show_sqlite.py
src/zip_mnist/: auto.py  autoencoder.py  clear_db.py  config.py  data.py  db.py  main.py  rmdb.py  run_all.py  schema.py  xgb.py  xgb_timeout.py  zip_np.py
